Fix de l'alignement

--- a/ui/app/styles/public.scss
+++ b/ui/app/styles/public.scss
@@ -1560,3 +1560,7 @@ p {
 [data-focus='me-panel'] [data-focus="badges-line"] [data-focus="round-line"] {
   justify-content: flex-start;
 }
+
+[data-scope="profile-top"] [data-focus="badges-line"] [data-focus="round-line"] {
+  margin-bottom: 0px;
+}
